<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/share_text" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_share_explanation" />
        <ImageView android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_via_barcode" android:scaleType="center" />
        <LinearLayout android:orientation="horizontal" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/share_app_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_share_app" android:layout_weight="1.0" />
            <Button android:id="@id/share_bookmark_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_share_bookmark" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/share_contact_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_share_contact" android:layout_weight="1.0" />
            <Button android:id="@id/share_clipboard_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_share_clipboard" android:layout_weight="1.0" />
        </LinearLayout>
        <EditText android:textSize="16.0sp" android:id="@id/share_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/msg_share_text" android:singleLine="true" android:selectAllOnFocus="true" />
    </LinearLayout>
</ScrollView>
