<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SurfaceView android:id="@id/preview_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" />
    <com.google.zxing.client.android.ViewfinderView android:id="@id/viewfinder_view" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/result_view" android:background="@color/result_view" android:padding="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <LinearLayout android:gravity="right|center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <ImageView android:id="@id/barcode_image_view" android:layout_width="160.0dip" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:scaleType="centerInside" android:adjustViewBounds="true" android:maxWidth="160.0dip" android:maxHeight="160.0dip" />
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/result_minor_text" android:id="@id/format_text_view_label" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_format" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/result_minor_text" android:id="@id/format_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/result_minor_text" android:id="@id/type_text_view_label" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_type" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/result_minor_text" android:id="@id/type_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/result_minor_text" android:id="@id/time_text_view_label" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_time" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/result_minor_text" android:id="@id/time_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/result_minor_text" android:id="@id/meta_text_view_label" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_meta" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/result_minor_text" android:id="@id/meta_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="22.0sp" android:textColor="@color/result_text" android:textColorLink="@color/result_text" android:autoLink="web" android:id="@id/contents_text_view" android:paddingLeft="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/result_text" android:textColorLink="@color/result_text" android:autoLink="web" android:id="@id/contents_supplement_text_view" android:padding="24.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/result_button_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="14.0sp" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:id="@id/shopper_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/button_google_shopper" android:drawableLeft="@drawable/shopper_icon" android:drawablePadding="4.0dip" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/status_text" android:layout_gravity="bottom|center" android:id="@id/status_view" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_status" />
</FrameLayout>
