<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rlTitle" android:background="@drawable/bg_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="12.0sp" android:textColor="#ffffffff" android:id="@id/btnClose" android:background="@drawable/bg_btn" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="8.0dip" android:text="@string/close" android:layout_alignParentLeft="true" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_dialog_title" android:layout_centerInParent="true" />
        <Button android:textSize="12.0sp" android:textColor="#ffffffff" android:id="@id/btnSend" android:background="@drawable/bg_btn" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="6.0dip" android:text="@string/send" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/bg_content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/llImage" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <RelativeLayout android:id="@id/rlTotal" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <LinearLayout android:gravity="center" android:id="@id/ll_text_limit_unit" android:background="@drawable/bg_delwords" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="false" android:layout_centerVertical="true">
                    <TextView android:textColor="#ff333333" android:id="@id/tv_text_limit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0px" android:text="140" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_delwords" />
                </LinearLayout>
            </RelativeLayout>
            <FrameLayout android:layout_gravity="center_horizontal" android:id="@id/flPic" android:background="#00ffffff" android:visibility="visible" android:layout_width="250.0dip" android:layout_height="200.0dip">
                <ImageView android:layout_gravity="center" android:id="@id/ivImage" android:background="@drawable/image_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="8.0dip" android:src="@drawable/dota" />
                <ImageView android:layout_gravity="right" android:id="@id/ivDelPic" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/del_pic" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="3.0dip" android:layout_above="@id/llImage" android:layout_alignParentTop="true">
            <EditText android:gravity="top|left|center" android:id="@id/etEdit" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="3.0px" android:singleLine="false" android:capitalize="sentences" android:isScrollContainer="true" android:imeOptions="actionDone" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
